--- a/static/css/stay_sharp/nicepage.css
+++ b/static/css/stay_sharp/nicepage.css
@@ -1537,7 +1537,7 @@ a {
   padding-left: 11px;
 }
 .u-form-vertical.u-form-spacing-10 {
-  margin-left: -10px;
+  margin-left: 20px;
   width: calc(100% +  10px);
 }
 .u-form-vertical.u-form-spacing-10 .u-form-group {
@@ -1672,6 +1672,9 @@ a {
 .u-label-left label + input,
 .u-label-left label + textarea {
   flex-grow: 1;
+}
+.u-label-left .u-agree-label {
+  width: auto;
 }
 .u-form-submit.u-label-left label {
   pointer-events: none;
@@ -11451,6 +11454,9 @@ section.u-image:not(.u-hover-box),
 .u-sticky {
   transition: background-color 250ms, box-shadow 250ms;
 }
+.u-header.u-box-shadow {
+  z-index: 1;
+}
 .u-overlap .u-header {
   position: absolute;
   top: 0;
@@ -16957,7 +16963,7 @@ img.u-opacity-0,
 }
 .u-language .u-icon {
   display: inline-flex;
-  height: 24px !important;
+  width: auto !important;
   vertical-align: middle;
 }
 .u-language .u-language-url,
@@ -19590,10 +19596,10 @@ a.pswp__share--download:hover {
 }
 .u-table th,
 .u-table td {
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-bottom: 0px;
+    padding-top: 2px;
+    padding-right: 2px;
+    padding-left: 2px;
+    padding-bottom: 2px;
     font-weight: inherit;
   position: inherit;
 }
@@ -20277,6 +20283,36 @@ section.u-dialog-block:not(.u-dialog-open) {
   right: 0;
   left: 0;
   z-index: 3;
+}
+.u-box-shadow.u-section-row:nth-child(10) {
+  z-index: 1;
+}
+.u-box-shadow.u-section-row:nth-child(9) {
+  z-index: 2;
+}
+.u-box-shadow.u-section-row:nth-child(8) {
+  z-index: 3;
+}
+.u-box-shadow.u-section-row:nth-child(7) {
+  z-index: 4;
+}
+.u-box-shadow.u-section-row:nth-child(6) {
+  z-index: 5;
+}
+.u-box-shadow.u-section-row:nth-child(5) {
+  z-index: 6;
+}
+.u-box-shadow.u-section-row:nth-child(4) {
+  z-index: 7;
+}
+.u-box-shadow.u-section-row:nth-child(3) {
+  z-index: 8;
+}
+.u-box-shadow.u-section-row:nth-child(2) {
+  z-index: 9;
+}
+.u-box-shadow.u-section-row:nth-child(1) {
+  z-index: 10;
 }
 .u-hover-box {
   overflow: hidden;
