--- a/templates/registration/login_base.html
+++ b/templates/registration/login_base.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 {% load static %}
 
-{% block title %} Login{% endblock %}
+{% block title %}{% endblock %}
 
 {% block static_main %}
     <link rel="stylesheet" href="{% static 'css/stay_sharp/Login.css' %}" media="screen">
@@ -10,6 +10,8 @@
 {% block font %}
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i">
 {% endblock %}
 
 {% block content %}"Login"{% endblock %}
