--- a/templates/Base.html
+++ b/templates/Base.html
@@ -81,7 +81,7 @@
                                             class="u-button-style u-nav-link u-text-active-palette-3-light-2 u-text-hover-palette-4-light-1 u-text-palette-1-light-3"
                                             href="{% url 'account_table' %}">Table - {{ user.get_username }}</a>
                                     </li>
-                                    <li class="u-nav-item"><a
+                                    <li class="u-nav-item"><a href="{% url 'edit_account' %}"
                                             class="u-button-style u-nav-link u-text-active-palette-3-light-2 u-text-hover-palette-4-light-1 u-text-palette-1-light-3">Edit
                                         account</a>
                                     </li>
@@ -132,7 +132,7 @@
                                                     class="u-button-style u-nav-link u-text-active-palette-3-light-2 u-text-hover-palette-4-light-1 u-text-palette-1-light-3"
                                                     href="{% url 'account_table' %}">Table - {{ user.get_username }}</a>
                                             </li>
-                                            <li class="u-nav-item"><a
+                                            <li class="u-nav-item"><a href="{% url 'edit_account' %}"
                                                     class="u-button-style u-nav-link u-text-active-palette-3-light-2 u-text-hover-palette-4-light-1 u-text-palette-1-light-3">Edit
                                                 account</a>
                                             </li>
