--- a/templates/Account-table.html
+++ b/templates/Account-table.html
@@ -10,7 +10,7 @@
 {% block font %}
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-   <link id="u-page-google-font" rel="stylesheet"
+    <link id="u-page-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto+Slab:100,200,300,400,500,600,700,800,900|Merriweather:300,300i,400,400i,700,700i,900,900i">
 {% endblock %}
 
@@ -18,16 +18,17 @@
 
 {% block section1 %}
 
-    <section class="skrollable u-align-center u-clearfix u-hidden-xs u-image u-lightbox u-parallax u-shading u-section-1"
+    <section
+            class="skrollable u-align-center u-clearfix u-hidden-xs u-image u-lightbox u-parallax u-shading u-section-1"
             id="account_table" data-image-width="1435" data-image-height="1000">
         <div class="u-clearfix u-sheet u-sheet-1">
-            <h4 class="u-text u-text-palette-3-light-2 u-text-1">{{ user.username }}'s notes</h4>
-            <a href="{% url 'account_table_edit' %}" class="infinite u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-white u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-body-alt-color u-text-hover-palette-2-base u-btn-1"
-           data-animation-name="" data-animation-duration="2000" data-animation-delay="0"
-               data-animation-direction="" data-animation-out="0">Edit</a>
-           <div class="u-align-left-md u-align-left-sm u-align-left-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-table u-table-responsive u-table-1"
-             data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-            <table class="u-table-entity u-table-entity-1">
+            <h4 class="u-text u-text-palette-3-light-2 u-text-1">{{ user.username }} notes</h4>
+            <a href="{% url 'account_table_edit' %}"
+               class="infinite u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-palette-4-light-1 u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-hover-palette-2-base u-text-palette-4-light-1 u-btn-1">Edit</a>
+            <div class="u-align-left-md u-align-left-sm u-align-left-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-table u-table-responsive u-table-1"
+                 data-animation-name="" data-animation-duration="0" data-animation-delay="0"
+                 data-animation-direction="">
+                <table class="u-table-entity u-table-entity-1">
                     <colgroup>
                         <col width="3.3%">
                         <col width="8.25%">
@@ -43,43 +44,43 @@
                         <col width="33.17%">
                     </colgroup>
                     <thead class="u-align-center u-custom-font u-font-roboto-slab u-palette-3-light-3 u-table-header u-table-valign-middle u-table-header-1">
-                <tr style="height: 75px;">
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-1">
-                        №
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-2">
-                        Date
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-3">
-                        Brend
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-4">
-                        Series
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-5">
-                        Steel
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-6">
-                        C, %
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-7">
-                        CrMoV, %
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-8">
-                        Length, mm
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-9">
-                        Width, mm
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-10">
-                        Sharp. angle (double)
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-11">
-                        Honing<br>&nbsp;add
-                    </th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-12">
-                        Comments
-                    </th>
+                    <tr style="height: 75px;">
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-1">
+                            №
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-2">
+                            Date
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-3">
+                            Brend
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-4">
+                            Series
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-5">
+                            Steel
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-6">
+                            C, %
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-7">
+                            CrMoV, %
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-8">
+                            Length, mm
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-9">
+                            Width, mm
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-10">
+                            Sharp. angle (double)
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-11">
+                            Honing<br>&nbsp;add
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-12">
+                            Comments
+                        </th>
                     </tr>
                     </thead>
                     <tbody class="u-align-center u-custom-font u-font-roboto-slab u-grey-10 u-table-alt-grey-25 u-table-body u-table-body-1">
