--- a/templates/Account-table_edit.html
+++ b/templates/Account-table_edit.html
@@ -18,118 +18,143 @@
 
 {% block section1 %}
 
-<section class="skrollable u-align-center u-clearfix u-hidden-xs u-image u-lightbox u-parallax u-shading u-section-1"
+    <section
+            class="skrollable u-align-center u-clearfix u-hidden-xs u-image u-lightbox u-parallax u-shading u-section-1"
             id="account_table" data-image-width="1435" data-image-height="1000">
-    <div class="u-clearfix u-sheet u-sheet-1">
-        <h4 class="u-text u-text-palette-3-light-2 u-text-1">{{ user.username }}'s notes</h4>
-        <button form="edit" type="submit"
-                class="infinite u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-white u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-body-alt-color u-text-hover-palette-2-base u-btn-1"
-                data-animation-name="bounceIn" data-animation-duration="3000" data-animation-delay="0"
-                data-animation-direction="" data-animation-out="0">Save
-        </button>
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <h4 class="u-text u-text-palette-3-light-2 u-text-1">{{ user.username }} notes</h4>
+            <button form="edit" type="submit"
+                    class="infinite u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-palette-4-light-1 u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-hover-palette-2-base u-text-palette-4-light-1 u-btn-1"
+                    data-animation-name="bounceIn" data-animation-duration="2000" data-animation-delay="0"
+                    data-animation-direction="" data-animation-out="0">Save
+            </button>
 
-        <a href="{% url 'account_table' %}" class="u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-white u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-body-alt-color u-text-hover-palette-2-base u-btn-2"
-           data-animation-name="" data-animation-duration="1000" data-animation-delay="0"
-           data-animation-direction="">Exit</a>
+            <a href="{% url 'account_table' %}"
+               class="u-active-none u-border-2 u-border-active-palette-4-light-2 u-border-hover-palette-2-base u-border-palette-4-light-2 u-btn u-button-style u-hover-none u-none u-text-active-palette-4-light-2 u-text-hover-palette-2-base u-text-palette-4-light-1 u-btn-2">Exit</a>
 
-        <div class="u-align-left-md u-align-left-sm u-align-left-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-table u-table-responsive u-table-1"
-            data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-            <table class="u-table-entity u-table-entity-1">
-                <colgroup>
-                    <col width="3.2%">
-                    <col width="8.25%">
-                    <col width="8.25%">
-                    <col width="8.25%">
-                    <col width="4.95%">
-                    <col width="5.78%">
-                    <col width="5.78%">
-                    <col width="5.78%">
-                    <col width="5.78%">
-                    <col width="5.78%">
-                    <col width="30.17%">
-                    <col width="4.0%">
-                </colgroup>
-                <thead class="u-align-center u-custom-font u-font-roboto-slab u-palette-3-light-3 u-table-header u-table-valign-middle u-table-header-1">
-                <tr style="height: 75px;">
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-1">№</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-2">Brend</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-3">Series</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-4">Steel</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-5">C, %</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-6">CrMoV, %</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-7">Length, mm</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-8">Width, mm</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-9">Sharp. angle (double)</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-10">Honing<br>&nbsp;add</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-11">Comments</th>
-                    <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-12">Del</th>
-                </tr>
-                </thead>
+            <div class="u-align-left-md u-align-left-sm u-align-left-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-table u-table-responsive u-table-1"
+                 data-animation-name="" data-animation-duration="0" data-animation-delay="0"
+                 data-animation-direction="">
+                <table class="u-table-entity u-table-entity-1">
+                    <colgroup>
+                        <col width="3.2%">
+                        <col width="8.25%">
+                        <col width="8.25%">
+                        <col width="8.25%">
+                        <col width="4.95%">
+                        <col width="5.78%">
+                        <col width="5.78%">
+                        <col width="5.78%">
+                        <col width="5.78%">
+                        <col width="5.78%">
+                        <col width="30.17%">
+                        <col width="4.0%">
+                    </colgroup>
+                    <thead class="u-align-center u-custom-font u-font-roboto-slab u-palette-3-light-3 u-table-header u-table-valign-middle u-table-header-1">
+                    <tr style="height: 75px;">
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-1">
+                            №
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-2">
+                            Brend
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-3">
+                            Series
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-4">
+                            Steel
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-5">
+                            C, %
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-6">
+                            CrMoV, %
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-7">
+                            Length, mm
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-8">
+                            Width, mm
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-9">
+                            Sharp. angle (double)
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-10">
+                            Honing<br>&nbsp;add
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-11">
+                            Comments
+                        </th>
+                        <th class="u-border-1 u-border-grey-30 u-custom-font u-font-roboto-slab u-table-cell u-table-cell-12">
+                            Del
+                        </th>
+                    </tr>
+                    </thead>
                     <tbody class="u-align-center u-custom-font u-font-roboto-slab u-grey-10 u-table-alt-grey-25 u-table-body u-table-body-1">
-                        <form action="" method="POST" id="edit">
-                            {% csrf_token %}
-                            {{ formset.management_form }}
-                            {% for form in formset %}
-                                {% for hidden in form.hidden_fields %}
-                                    {{ hidden }}
-                                {% endfor %}
-                                <tr style="height: 25px;">
-                                    <td class="u-border-1 u-border-grey-30 u-first-column u-palette-1-light-3 u-table-cell">{{ forloop.counter }}</td>
-                                    {% for field in form.visible_fields %}
-                                        {% if field.label == 'User' %}
-                                            <div>
-                                                <input type="hidden" name="{{ field.html_name }}" value="{{ user.id }}"
-                                                       id="{{ field.id_for_label }}">
-                                            </div>
-                                        {% elif field.label == "Comments" %}
-                                            <td class="u-border-1 u-border-grey-30 u-table-cell">
-                                                <label for="{{ field.id_for_label }}"></label>
-                                                <input style="width: 300px !important;height: 26px !important; "
-                                                       name="{{ field.html_name }}"
-                                                       id="{{ field.id_for_label }}"
-                                                       value="{{ field.initial }}"
-                                                       type="{{ field.widget_type }}">
-                                            </td>
-                                        {% elif field.label == 'Delete' %}
-                                            <td class="u-border-1 u-border-grey-30 u-table-cell">
-                                                <label for="{{ field.id_for_label }}"></label>
-                                                <input style="width: 12px !important; height: 12px !important;"
-                                                       name="{{ field.html_name }}"
-                                                       type="{{ field.widget_type }}"
-                                                       id="{{ field.id_for_label }}">
-                                            </td>
-                                        {% elif field.label == 'Brend' or field.label == 'Steel' or field.label == 'Series' %}
-                                            <td class="u-border-1 u-border-grey-30 u-table-cell">
-                                                <label for="{{ field.id_for_label }}"></label>
-                                                <input style="width: 70px !important; height: 26px !important;"
-                                                       name="{{ field.html_name }}"
-                                                       value="{{ field.initial|default_if_none:'' }}"
-                                                       type="{{ field.widget_type }}" id="{{ field.id_for_label }}">
-                                            </td>
-                                        {% elif field.label == 'Length' %}
-                                            <td class="u-border-1 u-border-grey-30 u-table-cell">
-                                                <label for="{{ field.id_for_label }}"></label>
-                                                <input style="width: 56px !important; height: 26px !important;"
-                                                       name="{{ field.html_name }}"
-                                                       value="{{ field.initial|default_if_none:'' }}"
-                                                       type="{{ field.widget_type }}" id="{{ field.id_for_label }}">
-                                            </td>
-                                        {% else %}
-                                            <td class="u-border-1 u-border-grey-30 u-table-cell">
-                                                <label for="{{ field.id_for_label }}"></label>
-                                                <input style="width: 50px !important; padding-top: 2px !important; height: 26px !important;"
-                                                       name="{{ field.html_name }}"
-                                                       value="{{ field.initial|default_if_none:'' }}"
-                                                       type="{{ field.widget_type }}"
-                                                       id="{{ field.id_for_label }}">
-                                            </td>
-                                        {% endif %}
-                                    {% endfor %}
-                                </tr>
+                    <form action="" method="POST" id="edit">
+                        {% csrf_token %}
+                        {{ formset.management_form }}
+                        {% for form in formset %}
+                            {% for hidden in form.hidden_fields %}
+                                {{ hidden }}
                             {% endfor %}
-                        </form>
+                            <tr style="height: 25px;">
+                                <td class="u-border-1 u-border-grey-30 u-first-column u-palette-1-light-3 u-table-cell">{{ forloop.counter }}</td>
+                                {% for field in form.visible_fields %}
+                                    {% if field.label == 'User' %}
+                                        <div>
+                                            <input type="hidden" name="{{ field.html_name }}" value="{{ user.id }}"
+                                                   id="{{ field.id_for_label }}">
+                                        </div>
+                                    {% elif field.label == "Comments" %}
+                                        <td class="u-border-1 u-border-grey-30 u-table-cell">
+                                            <label for="{{ field.id_for_label }}"></label>
+                                            <input style="width: 300px !important;height: 26px !important; "
+                                                   name="{{ field.html_name }}"
+                                                   id="{{ field.id_for_label }}"
+                                                   value="{{ field.initial }}"
+                                                   type="{{ field.widget_type }}">
+                                        </td>
+                                    {% elif field.label == 'Delete' %}
+                                        <td class="u-border-1 u-border-grey-30 u-table-cell">
+                                            <label for="{{ field.id_for_label }}"></label>
+                                            <input style="width: 12px !important; height: 12px !important;"
+                                                   name="{{ field.html_name }}"
+                                                   type="{{ field.widget_type }}"
+                                                   id="{{ field.id_for_label }}">
+                                        </td>
+                                    {% elif field.label == 'Brend' or field.label == 'Steel' or field.label == 'Series' %}
+                                        <td class="u-border-1 u-border-grey-30 u-table-cell">
+                                            <label for="{{ field.id_for_label }}"></label>
+                                            <input style="width: 70px !important; height: 26px !important;"
+                                                   name="{{ field.html_name }}"
+                                                   value="{{ field.initial|default_if_none:'' }}"
+                                                   type="{{ field.widget_type }}" id="{{ field.id_for_label }}">
+                                        </td>
+                                    {% elif field.label == 'Length' %}
+                                        <td class="u-border-1 u-border-grey-30 u-table-cell">
+                                            <label for="{{ field.id_for_label }}"></label>
+                                            <input style="width: 56px !important; height: 26px !important;"
+                                                   name="{{ field.html_name }}"
+                                                   value="{{ field.initial|default_if_none:'' }}"
+                                                   type="{{ field.widget_type }}" id="{{ field.id_for_label }}">
+                                        </td>
+                                    {% else %}
+                                        <td class="u-border-1 u-border-grey-30 u-table-cell">
+                                            <label for="{{ field.id_for_label }}"></label>
+                                            <input style="width: 50px !important; padding-top: 2px !important; height: 26px !important;"
+                                                   name="{{ field.html_name }}"
+                                                   value="{{ field.initial|default_if_none:'' }}"
+                                                   type="{{ field.widget_type }}"
+                                                   id="{{ field.id_for_label }}">
+                                        </td>
+                                    {% endif %}
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    </form>
                     </tbody>
-            </table>
+                </table>
             </div>
         </div>
     </section>
