--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,30 +1,92 @@
-{% extends 'registration/login_base.html' %}
+{% extends 'Base.html' %}
+{% load static %}
 
-{% block form1 %}
-    <h3 class="u-text u-text-default u-text-1">Enter email</h3>
-    <div class="u-form u-form-1">
-        {% if form.ernail.errors %} {{ form.ernail.errors }} {% endif %}
-        <form action="" method="POST"
-              class="u-clearfix u-form-custom-backend u-form-spacing-10 u-form-vertical u-inner-form"
-              source="custom" name="login" style="padding: 10px;" redirect="true">
-            {% csrf_token %}
+{% block title %}Password_reset_form{% endblock %}
 
-            <div class="u-form-email u-form-group">
-                <label for="email" class="u-label u-label-1">Enter email</label>
-                <input type="email" placeholder= "Enter your email address" id="email"
-                       name="email"
-                       class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white"
-                       required="">
-            </div>
+{% block static_main %}
+    <link rel="stylesheet" href="{% static 'css/stay_sharp/Login.css' %}" media="screen">
+{% endblock %}
 
-            <div>
-                {{ form.errors }}
+{% block font %}
+    <link id="u-theme-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i">
+{% endblock %}
+
+{% block content %}"Login"{% endblock %}
+
+{% block section1 %}
+    <section class="skrollable u-clearfix u-image u-lightbox u-parallax u-shading u-section-4" id="carousel_c598"
+             data-image-width="1500" data-image-height="1000">
+        <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+            <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
+                <div class="u-layout">
+                    <div class="u-layout-row">
+                        <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-1">
+                            <div class="u-container-layout u-container-layout-1">
+                                <h3 class="u-text u-text-default u-text-palette-3-light-2 u-text-1">Step 1</h3>
+                                <h3 class="u-align-center u-text u-text-palette-4-light-2 u-text-2"
+                                    data-animation-name="bounceIn" data-animation-duration="1000"
+                                    data-animation-delay="0"
+                                    data-animation-direction=""> Enter the email<br>&nbsp;that was used during the
+                                    registration
+                                </h3>
+                                <div class="u-expanded-width-lg u-expanded-width-md u-form u-form-1"
+                                     data-animation-name=""
+                                     data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                                    <form action="" method="POST"
+                                          class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
+                                          source="custom" name="login" style="padding: 11px;" redirect="true">
+                                        {% csrf_token %}
+                                        <div class="u-form-email u-form-group">
+                                            <label for="email-ad88"
+                                                   class="u-label u-text-palette-3-light-2 u-label-1">Email</label>
+                                            <input type="email" placeholder="email_address" id="email-ad88" name="email"
+                                                   class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white u-input-1"
+                                                   required="">
+                                        </div>
+                                        <div class="u-align-right u-form-group u-form-submit">
+                                            <input type="submit" value="submit"
+                                                   class="u-active-none u-border-2 u-border-active-palette-2-base u-border-hover-palette-4-light-2 u-border-palette-3-light-2 u-btn u-btn-submit u-button-style u-hover-none u-none u-text-active-palette-2-base u-text-hover-palette-4-light-2 u-text-palette-3-light-2 u-btn-1"
+                                                   data-animation-name="" data-animation-duration="0"
+                                                   data-animation-delay="0"
+                                                   data-animation-direction="">
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="u-container-style u-group u-group-1">
+                                    <div class="u-container-layout u-container-layout-2">
+{#                                     {% if form.email.errors %} {{ form.email.errors }} {% endif %}#}
+                                        {#                                при наличии ошибок - выводятся сообщения#}
+                                        {% if form.errors %}
+                                            <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-palette-3-light-2 u-text-3">
+                                                Messenges:</h5>
+                                            <h5 class="u-align-center u-text u-text-palette-3-light-2 u-text-4">
+                                                -------------<br>
+                                            </h5>
+                                            <ul class="u-align-left u-custom-list u-text u-text-palette-2-light-3 u-text-5"
+                                                data-animation-name="bounceIn" data-animation-duration="1000"
+                                                data-animation-direction="">
+                                                {% for key, value in form.errors.items %}
+                                                    {% for error in value %}
+                                                        <li>
+                                                            <div class="u-list-icon">
+                                                                <div>○</div>
+                                                            </div>
+                                                            {{ error }}
+                                                        </li>
+                                                    {% endfor %}
+                                                {% endfor %}
+                                            </ul>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-center-xs u-align-left-xxl u-form-group u-form-submit">
-                <input type="submit" value="submit"
-                       class="u-border-none u-btn u-btn-submit u-button-style u-hover-palette-4-light-1 u-palette-3-light-1 u-btn-1">
-                {#                                        <input type="submit" value="submit" class="u-form-control-hidden">#}
-            </div>
-        </form>
-    </div>
+        </div>
+    </section>
 {% endblock %}
