--- a/static/css/stay_sharp/Calculation.css
+++ b/static/css/stay_sharp/Calculation.css
@@ -1,34 +1,35 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  min-height: 794px;
   background-position: 50% 50%;
+  min-height: 783px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   background-image: none;
-  width: 1220px;
-  margin: 81px auto 19px;
+  width: 1133px;
+  margin: 84px auto 38px;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 710px;
+  min-height: 767px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 17px 30px;
+  padding: 20px 30px;
 }
 
 .u-section-1 .u-text-1 {
+  background-image: none;
   font-size: 1.25rem;
-  font-weight: 700;
-  width: 251px;
-  margin: -2px auto 0;
+  font-weight: 400;
+  width: 249px;
+  margin: 13px auto 0;
 }
 
 .u-section-1 .u-form-1 {
-  height: 262px;
+  height: 292px;
   width: 280px;
-  margin: 12px auto 0;
+  margin: 16px auto 0;
 }
 
 .u-section-1 .u-form-group-1 {
@@ -38,7 +39,7 @@
 .u-section-1 .u-label-1 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-1 {
@@ -52,7 +53,7 @@
 .u-section-1 .u-label-2 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-2 {
@@ -66,7 +67,7 @@
 .u-section-1 .u-label-3 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-3 {
@@ -80,7 +81,7 @@
 .u-section-1 .u-label-4 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-4 {
@@ -94,7 +95,7 @@
 .u-section-1 .u-label-5 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-5 {
@@ -104,23 +105,25 @@
 .u-section-1 .u-label-6 {
   width: 136px;
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-btn-1 {
   letter-spacing: 1px;
   border-style: none;
-  font-weight: 700;
   text-transform: uppercase;
   background-image: none;
   width: 100%;
+  font-size: 0.875rem;
+  font-weight: normal;
   padding: 5px 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.5rem;
-  width: 252px;
-  margin: 129px auto 0;
+  font-weight: 400;
+  width: 251px;
+  margin: 126px auto 0;
 }
 
 .u-section-1 .u-group-1 {
@@ -128,7 +131,7 @@
   width: 100px;
   height: auto;
   min-height: 47px;
-  margin: 12px 170px 0 auto;
+  margin: 12px 131px 0 auto;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -137,34 +140,36 @@
 
 .u-section-1 .u-text-3 {
   font-size: 1.5rem;
+  font-weight: 400;
   margin: 0;
 }
 
 .u-section-1 .u-text-4 {
   font-size: 1.5rem;
-  font-weight: 600;
-  margin: -36px 270px 0 167px;
+  font-weight: 400;
+  margin: -39px 246px 0 136px;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 710px;
+  min-height: 767px;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 15px 14px;
+  padding: 20px 14px 15px;
 }
 
 .u-section-1 .u-text-5 {
+  font-weight: 400;
+  font-size: 1.25rem;
   width: 250px;
-  background-image: none;
-  margin: 0 auto;
+  margin: 13px auto 0;
 }
 
 .u-section-1 .u-form-2 {
-  height: 344px;
+  height: 400px;
   background-image: none;
   width: 280px;
-  margin: 10px auto 0;
+  margin: 16px auto 0;
 }
 
 .u-section-1 .u-form-group-7 {
@@ -174,7 +179,7 @@
 .u-section-1 .u-label-7 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-6 {
@@ -188,7 +193,7 @@
 .u-section-1 .u-label-8 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-7 {
@@ -202,7 +207,7 @@
 .u-section-1 .u-label-9 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-8 {
@@ -216,7 +221,7 @@
 .u-section-1 .u-label-10 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-9 {
@@ -230,7 +235,7 @@
 .u-section-1 .u-label-11 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-10 {
@@ -244,7 +249,7 @@
 .u-section-1 .u-label-12 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-11 {
@@ -258,7 +263,7 @@
 .u-section-1 .u-label-13 {
   font-size: 1.25rem;
   width: 136px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-input-12 {
@@ -268,31 +273,32 @@
 .u-section-1 .u-label-14 {
   width: 136px;
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .u-section-1 .u-btn-2 {
   letter-spacing: 1px;
   border-style: none;
-  font-weight: 700;
   text-transform: uppercase;
   background-image: none;
   width: 100%;
+  font-weight: 500;
+  font-size: 0.875rem;
   padding: 5px 0;
 }
 
 .u-section-1 .u-text-6 {
   font-size: 1.5rem;
+  font-weight: 400;
   width: 299px;
-  margin: 23px auto 0;
+  margin: 37px auto 0;
 }
 
 .u-section-1 .u-group-2 {
-  background-image: none;
-  width: 100px;
-  height: auto;
+  width: 106px;
   min-height: 47px;
-  margin: 12px 185px 0 auto;
+  height: auto;
+  margin: 10px 140px 0 281px;
 }
 
 .u-section-1 .u-container-layout-4 {
@@ -301,61 +307,43 @@
 
 .u-section-1 .u-text-7 {
   font-size: 1.5rem;
+  font-weight: 400;
   margin: 10px 0 0;
 }
 
 .u-section-1 .u-text-8 {
   font-size: 1.5rem;
-  font-weight: 600;
-  margin: -37px 285px 0 183px;
+  font-weight: 400;
+  margin: -37px 262px 0 152px;
 }
 
 @media (max-width: 1399px) {
    .u-section-1 {
-    min-height: 771px;
+    min-height: 773px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    width: 1140px;
-    margin-top: 80px;
+    width: 1083px;
+    margin-top: 81px;
+    margin-bottom: 52px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 688px;
+    min-height: 724px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding: 4px 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 3px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: 10px;
   }
 
   .u-section-1 .u-form-1 {
     width: 281px;
-    margin-top: 6px;
-  }
-
-  .u-section-1 .u-label-1 {
-    font-weight: 700;
-  }
-
-  .u-section-1 .u-label-3 {
-    font-weight: 700;
-  }
-
-  .u-section-1 .u-label-4 {
-    font-weight: 700;
-  }
-
-  .u-section-1 .u-label-5 {
-    font-weight: 700;
-  }
-
-  .u-section-1 .u-label-6 {
-    font-weight: 700;
   }
 
   .u-section-1 .u-text-2 {
@@ -364,8 +352,8 @@
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 17px;
-    margin-right: 192px;
+    margin-top: 10px;
+    margin-right: 149px;
     height: auto;
   }
 
@@ -382,89 +370,87 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-right: 292px;
-    margin-left: 163px;
+    margin-top: -37px;
+    margin-right: 262px;
+    margin-left: 155px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 688px;
+    min-height: 724px;
   }
 
   .u-section-1 .u-container-layout-3 {
-    padding: 4px 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 4px;
   }
 
   .u-section-1 .u-text-5 {
-    width: auto;
-    margin-top: 12px;
+    width: 167px;
+    margin-top: 11px;
   }
 
   .u-section-1 .u-text-6 {
     width: 229px;
-    margin-top: 7px;
+    margin-top: 34px;
   }
 
   .u-section-1 .u-group-2 {
-    margin-top: 17px;
-    margin-right: 179px;
+    margin-right: 139px;
+    margin-left: auto;
     height: auto;
   }
 
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-1 .u-text-7 {
-    width: auto;
-    margin-left: 7px;
-    margin-right: 7px;
+    width: 67px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-8 {
     width: auto;
-    margin-right: 279px;
-    margin-left: 176px;
+    margin-right: 258px;
+    margin-left: 159px;
   }
 }
 
 @media (max-width: 1199px) {
    .u-section-1 {
-    background-position: 50% 50%;
-    min-height: 550px;
+    min-height: 686px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
     width: 940px;
     margin-top: 82px;
-    margin-bottom: 17px;
+    margin-bottom: 21px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 637px;
+    min-height: 605px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-top: 0;
     padding-bottom: 0;
   }
 
   .u-section-1 .u-text-1 {
+    font-size: 1.125rem;
+    width: 152px;
     margin-top: 14px;
   }
 
   .u-section-1 .u-form-1 {
     width: 280px;
-    margin-top: 9px;
+    margin-top: 10px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 108px;
+    font-size: 1.25rem;
+    margin-top: 89px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 18px;
-    margin-right: 129px;
+    margin-right: 115px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -478,30 +464,30 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 637px;
+    min-height: 605px;
   }
 
   .u-section-1 .u-container-layout-3 {
-    padding-top: 0;
     padding-bottom: 0;
   }
 
   .u-section-1 .u-text-5 {
-    margin-top: 16px;
+    font-size: 1.125rem;
+    width: 150px;
+    margin-top: 10px;
   }
 
   .u-section-1 .u-form-2 {
+    margin-top: 10px;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 1.25rem;
     margin-top: 0;
   }
 
   .u-section-1 .u-group-2 {
-    margin-top: 18px;
-    margin-right: 129px;
-  }
-
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-right: 113px;
   }
 
   .u-section-1 .u-text-8 {
@@ -512,19 +498,25 @@
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 34px;
+    min-height: 736px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
     width: 768px;
+    margin-bottom: 27px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 684px;
+    min-height: 649px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 106px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-right: 86px;
+    margin-top: 13px;
+    margin-right: 84px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -538,16 +530,20 @@
   }
 
   .u-section-1 .u-text-4 {
-    margin-left: 78px;
+    margin-left: 76px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 684px;
+    min-height: 649px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 18px;
   }
 
   .u-section-1 .u-group-2 {
-    margin-top: 15px;
-    margin-right: 86px;
+    margin-top: 13px;
+    margin-right: 70px;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -556,14 +552,13 @@
   }
 
   .u-section-1 .u-text-7 {
+    width: auto;
     margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   .u-section-1 .u-text-8 {
-    margin-top: -35px;
-    margin-right: 172px;
     margin-left: 79px;
   }
 }
@@ -583,12 +578,11 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 47px;
+    margin-top: 26px;
     margin-right: 135px;
   }
 
   .u-section-1 .u-form-1 {
-    height: 292px;
     margin-top: -85px;
     margin-right: 425px;
     margin-left: 59px;
@@ -627,7 +621,6 @@
   }
 
   .u-section-1 .u-form-2 {
-    height: 400px;
     margin-top: -99px;
     margin-right: 425px;
     margin-left: 58px;
@@ -640,18 +633,12 @@
     margin-left: 432px;
   }
 
-  .u-section-1 .u-group-2 {
-    margin-top: 32px;
-    margin-right: 118px;
-  }
-
   .u-section-1 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
   .u-section-1 .u-text-8 {
-    margin-top: -37px;
     margin-right: 225px;
     margin-left: auto;
   }
@@ -673,13 +660,15 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 6px;
+    width: auto;
+    margin-top: 9px;
     margin-right: 92px;
+    margin-left: 127px;
   }
 
   .u-section-1 .u-form-1 {
     width: 280px;
-    margin-top: 12px;
+    margin-top: 16px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -693,7 +682,7 @@
 
   .u-section-1 .u-group-1 {
     margin-top: 17px;
-    margin-right: 86px;
+    margin-right: 84px;
   }
 
   .u-section-1 .u-text-3 {
@@ -712,7 +701,7 @@
   }
 
   .u-section-1 .u-text-5 {
-    margin-top: 9px;
+    margin-top: 8px;
     margin-right: auto;
   }
 
@@ -729,11 +718,6 @@
     margin-right: auto;
   }
 
-  .u-section-1 .u-group-2 {
-    margin-top: 19px;
-    margin-right: 86px;
-  }
-
   .u-section-1 .u-text-7 {
     width: 61px;
     margin-left: auto;
@@ -745,25 +729,26 @@
     margin-left: 86px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/317024594-02.jpeg");
   background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 848px;
+  min-height: 100vh;
 }
 
 .u-section-2 .u-layout-wrap-1 {
   background-image: none;
-  margin: 25px 0 52px;
+  width: 1133px;
+  margin: 31px auto 27px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 789px;
+  min-height: 811px;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 0;
+  padding: 12px 30px;
 }
 
 .u-section-2 .u-image-1 {
@@ -773,11 +758,11 @@
 }
 
 .u-section-2 .u-layout-cell-2 {
-  min-height: 789px;
+  min-height: 811px;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 11px 0;
+  padding: 20px 14px 15px;
 }
 
 .u-section-2 .u-image-2 {
@@ -787,168 +772,141 @@
 }
 
 @media (max-width: 1399px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 808px;
+  .u-section-2 .u-layout-wrap-1 {
+    width: 1083px;
+    margin-bottom: 33px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 19px;
-    margin-bottom: 19px;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 805px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding: 0;
   }
 
   .u-section-2 .u-image-1 {
     width: 474px;
-    height: 742px;
     margin-top: 8px;
   }
 
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 805px;
+  }
+
   .u-section-2 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
   }
 
   .u-section-2 .u-image-2 {
     width: 477px;
-    height: 742px;
     margin-top: 8px;
   }
 }
 
 @media (max-width: 1199px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
-    min-height: 796px;
+    min-height: 735px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    margin-bottom: 24px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 940px;
+    margin: 25px 0 34px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 766px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-top: 1px;
-    padding-bottom: 1px;
+    min-height: 698px;
   }
 
   .u-section-2 .u-image-1 {
     width: 441px;
-    height: 723px;
+    height: 662px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 766px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 1px;
-    padding-bottom: 1px;
+    min-height: 698px;
   }
 
   .u-section-2 .u-image-2 {
     width: 441px;
-    height: 723px;
+    height: 672px;
     margin-top: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 631px;
+    min-height: 605px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 26px;
+    margin-bottom: 26px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 627px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-top: 0;
-    padding-bottom: 0;
+    min-height: 575px;
   }
 
   .u-section-2 .u-image-1 {
     width: 355px;
-    height: 588px;
+    height: 526px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 627px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 0;
+    min-height: 575px;
   }
 
   .u-section-2 .u-image-2 {
     width: 357px;
-    height: 591px;
+    height: 534px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1255px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 18px;
-    margin-bottom: 18px;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 1182px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 611px;
+    min-height: 580px;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 0;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 626px;
+    min-height: 592px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1275px;
+    min-height: 1200px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    margin-top: 22px;
-    margin-bottom: 22px;
+    margin-top: 27px;
+    margin-bottom: 27px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 620px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-top: 7px;
-    padding-bottom: 7px;
+    min-height: 577px;
   }
 
   .u-section-2 .u-image-1 {
     width: 357px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 7px;
-    padding-bottom: 7px;
-  }
-
   .u-section-2 .u-image-2 {
     width: 353px;
-    height: 578px;
     margin-top: 7px;
   }
 } .u-section-3 {
@@ -972,6 +930,8 @@
 }
 
 .u-section-3 .u-text-1 {
+  font-size: 1.5rem;
+  font-weight: normal;
   margin: 35px 920px 0 74px;
 }
 
@@ -981,10 +941,6 @@
 }
 
 .u-section-3 .u-list-icon-1 {
-  color: rgb(255, 167, 84) !important;
-}
-
-.u-section-3 .u-list-icon-2 {
   color: rgb(255, 167, 84) !important;
 }
 
@@ -1031,7 +987,10 @@
   }
 
   .u-section-3 .u-text-1 {
-    margin-left: 159px;
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-right: 638px;
+    margin-left: 108px;
   }
 
   .u-section-3 .u-text-2 {
@@ -1041,7 +1000,13 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 284px;
+    min-height: 296px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 17px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-layout-cell-1 {
@@ -1050,6 +1015,7 @@
 
   .u-section-3 .u-text-1 {
     margin-top: 20px;
+    margin-right: 552px;
     margin-left: 135px;
   }
 
@@ -1066,19 +1032,24 @@
   }
 
   .u-section-3 .u-layout-wrap-1 {
-    margin-top: 34px;
-    margin-bottom: 33px;
+    margin-top: 30px;
+    margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 172px;
   }
 
   .u-section-3 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-right: 528px;
+    margin-left: 74px;
   }
 
   .u-section-3 .u-text-2 {
@@ -1098,6 +1069,7 @@
   .u-section-3 .u-text-1 {
     margin-top: -1px;
     margin-left: auto;
+    margin-right: 182px;
   }
 
   .u-section-3 .u-text-2 {
@@ -1217,7 +1189,7 @@
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 373px;
+    min-height: 440px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
@@ -1231,6 +1203,10 @@
 
   .u-section-4 .u-text-1 {
     margin-left: 154px;
+  }
+
+  .u-section-4 .u-text-2 {
+    font-weight: normal;
   }
 
   .u-section-4 .u-layout-cell-2 {
@@ -1248,7 +1224,7 @@
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 154px;
+    min-height: 221px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
