--- a/static/css/stay_sharp/Choose-the-angle.css
+++ b/static/css/stay_sharp/Choose-the-angle.css
@@ -1,40 +1,83 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 817px;
+  min-height: 794px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin-top: 78px;
-  margin-bottom: 60px;
+  margin-top: 82px;
+  margin-bottom: 35px;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 669px;
+  min-height: 677px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 0;
+  padding: 10px 20px;
+}
+
+.u-section-1 .u-group-1 {
+  min-height: 460px;
+  height: auto;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  background-image: none;
+  width: 303px;
+  margin: 50px auto 0;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 10px 0;
 }
 
 .u-section-1 .u-text-1 {
+  width: 148px;
+  font-size: 1.125rem;
   font-weight: 700;
-  width: 325px;
-  margin: 13px auto 0;
+  margin: 7px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  width: 67px;
-  margin: 11px auto 0;
+  font-size: 1rem;
+  margin: 15px 10px 0;
+}
+
+.u-section-1 .u-text-3 {
+  font-size: 1rem;
+  margin: 32px 10px 0;
+}
+
+.u-section-1 .u-text-4 {
+  font-size: 1rem;
+  margin: 29px 10px 0;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 677px;
+}
+
+.u-section-1 .u-container-layout-3 {
+  padding: 0;
+}
+
+.u-section-1 .u-text-5 {
+  background-image: none;
+  font-weight: normal;
+  font-size: 1.5rem;
+  margin: 10px -21px 0;
+}
+
+.u-section-1 .u-text-6 {
+  width: 98px;
+  margin: 25px auto 0;
 }
 
 .u-section-1 .u-form-1 {
-  height: 328px;
-  width: 458px;
-  margin: -35px auto 0;
+  height: 267px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-form-group-1 {
@@ -43,8 +86,12 @@
 }
 
 .u-section-1 .u-label-1 {
-  font-size: 1.125rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-1 {
+  font-size: 1rem;
 }
 
 .u-section-1 .u-form-group-2 {
@@ -53,8 +100,12 @@
 }
 
 .u-section-1 .u-label-2 {
-  font-size: 1.125rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-2 {
+  font-size: 1rem;
 }
 
 .u-section-1 .u-form-group-3 {
@@ -63,8 +114,12 @@
 }
 
 .u-section-1 .u-label-3 {
-  font-size: 1.125rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-3 {
+  font-size: 1rem;
 }
 
 .u-section-1 .u-form-group-4 {
@@ -83,17 +138,23 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-3 {
+.u-section-1 .u-text-7 {
   letter-spacing: 2px;
   font-weight: 400;
-  width: 267px;
-  margin: -15px auto 0;
+  font-size: 1.25rem;
+  width: 245px;
+  margin: 9px auto 0;
+}
+
+.u-section-1 .u-text-8 {
+  width: 91px;
+  margin: 10px auto 0;
 }
 
 .u-section-1 .u-form-2 {
-  height: 248px;
-  width: 458px;
-  margin: 0 auto;
+  height: 178px;
+  width: 280px;
+  margin: 5px auto 0;
 }
 
 .u-section-1 .u-form-group-5 {
@@ -103,7 +164,11 @@
 
 .u-section-1 .u-label-4 {
   font-size: 1.125rem;
-  font-weight: 700;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-4 {
+  height: 38px;
 }
 
 .u-section-1 .u-form-group-6 {
@@ -113,7 +178,11 @@
 
 .u-section-1 .u-label-5 {
   font-size: 1.125rem;
-  font-weight: 700;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-5 {
+  height: 38px;
 }
 
 .u-section-1 .u-form-group-7 {
@@ -132,35 +201,31 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-4 {
-  width: 67px;
-  margin: -242px auto 0;
-}
-
-.u-section-1 .u-text-5 {
+.u-section-1 .u-text-9 {
   letter-spacing: 2px;
   font-weight: 400;
-  width: 284px;
-  margin: 204px auto 0;
+  font-size: 1.25rem;
+  width: 239px;
+  margin: 7px auto 0;
 }
 
-.u-section-1 .u-layout-cell-2 {
-  min-height: 288px;
+.u-section-1 .u-layout-cell-3 {
+  min-height: 677px;
 }
 
-.u-section-1 .u-container-layout-2 {
-  padding: 0 30px;
+.u-section-1 .u-container-layout-4 {
+  padding: 0;
 }
 
-.u-section-1 .u-text-6 {
-  width: 67px;
-  margin: 50px auto 0;
+.u-section-1 .u-text-10 {
+  width: 101px;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-form-3 {
-  height: 168px;
-  width: 458px;
-  margin: -15px auto 0;
+  height: 107px;
+  width: 280px;
+  margin: 31px auto 0;
 }
 
 .u-section-1 .u-form-group-8 {
@@ -170,7 +235,12 @@
 
 .u-section-1 .u-label-6 {
   font-size: 1.125rem;
-  font-weight: 700;
+  font-weight: 400;
+}
+
+.u-section-1 .u-input-6 {
+  height: 45px;
+  font-size: 1rem;
 }
 
 .u-section-1 .u-form-group-9 {
@@ -189,427 +259,540 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-7 {
-  letter-spacing: normal;
-  font-weight: normal;
-  width: 247px;
-  margin: -5px auto 0;
-}
-
-.u-section-1 .u-layout-cell-3 {
-  min-height: 381px;
-}
-
-.u-section-1 .u-container-layout-3 {
-  padding: 10px 30px;
-}
-
-.u-section-1 .u-text-8 {
-  font-weight: 700;
-  font-size: 1.875rem;
-  width: 238px;
-  margin: 30px auto 0;
-}
-
-.u-section-1 .u-text-9 {
-  font-weight: normal;
-  font-size: 1.5rem;
-  margin: 52px 264px 0 50px;
-}
-
-.u-section-1 .u-text-10 {
-  font-size: 1.5rem;
-  margin: -28px 113px 0 335px;
-}
-
 .u-section-1 .u-text-11 {
-  font-size: 1.5rem;
-  margin: 39px 264px 0 50px;
+  letter-spacing: 2px;
+  font-weight: 400;
+  font-size: 1.25rem;
+  width: 232px;
+  margin: 29px auto 0;
 }
 
 .u-section-1 .u-text-12 {
   font-size: 1.5rem;
-  margin: -42px 113px 0 335px;
+  font-weight: 400;
+  width: 194px;
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-13 {
+  font-size: 1.5rem;
+  margin: 54px 59px 0 258px;
+}
+
+.u-section-1 .u-text-14 {
+  font-weight: normal;
+  font-size: 1.25rem;
+  margin: -26px 168px 0 70px;
+}
+
+.u-section-1 .u-text-15 {
+  font-size: 1.25rem;
+  font-weight: normal;
+  margin: 50px 148px 0 70px;
+}
+
+.u-section-1 .u-text-16 {
+  font-size: 1.5rem;
+  margin: -38px 59px 0 258px;
 }
 
 @media (max-width: 1399px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
-    min-height: 815px;
+    min-height: 808px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 76px;
-    margin-bottom: 51px;
+    margin-top: 79px;
+    margin-bottom: 37px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 688px;
+    min-height: 706px;
   }
 
-  .u-section-1 .u-text-1 {
-    width: 311px;
+  .u-section-1 .u-group-1 {
+    width: 299px;
+    margin-top: 55px;
+    height: auto;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: -20px;
-  }
-
-  .u-section-1 .u-form-2 {
-    margin-top: 24px;
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: -256px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 212px;
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 298px;
+    min-height: 706px;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-weight: 400;
+    width: auto;
+    margin-top: 8px;
+    margin-left: -36px;
+    margin-right: -36px;
   }
 
   .u-section-1 .u-text-6 {
-    margin-top: 45px;
+    margin-top: 23px;
   }
 
-  .u-section-1 .u-form-3 {
-    margin-top: -6px;
-  }
-
-  .u-section-1 .u-text-7 {
-    letter-spacing: 2px;
-    font-weight: 400;
-    margin-top: -4px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 390px;
+  .u-section-1 .u-form-1 {
+    margin-top: 8px;
   }
 
   .u-section-1 .u-text-8 {
-    margin-top: 54px;
+    width: 67px;
+    margin-top: 11px;
+  }
+
+  .u-section-1 .u-form-2 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-9 {
-    font-weight: bold;
-    width: auto;
-    margin-top: 31px;
-    margin-right: 237px;
-    margin-left: 30px;
+    width: 235px;
+    margin-top: 12px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 706px;
   }
 
   .u-section-1 .u-text-10 {
-    width: auto;
-    margin-right: 96px;
-    margin-left: 312px;
+    margin-top: 58px;
   }
 
-  .u-section-1 .u-text-11 {
-    font-size: 1.25rem;
-    width: auto;
-    margin-top: 51px;
-    margin-right: 232px;
-    margin-left: 45px;
+  .u-section-1 .u-form-3 {
+    margin-top: 32px;
   }
 
   .u-section-1 .u-text-12 {
+    width: 193px;
+  }
+
+  .u-section-1 .u-text-13 {
     width: auto;
-    margin-right: 93px;
-    margin-left: 309px;
+    margin-top: 51px;
+    margin-right: 49px;
+    margin-left: 241px;
+  }
+
+  .u-section-1 .u-text-14 {
+    font-weight: 400;
+    width: auto;
+    margin-right: 165px;
+    margin-left: 60px;
+  }
+
+  .u-section-1 .u-text-15 {
+    font-weight: 400;
+    width: auto;
+    margin-top: 42px;
+    margin-right: 131px;
+    margin-left: 60px;
+  }
+
+  .u-section-1 .u-text-16 {
+    width: auto;
+    margin-top: -36px;
+    margin-right: 47px;
+    margin-left: 238px;
   }
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 572px;
+  }
+
   .u-section-1 .u-layout-wrap-1 {
     margin-top: 83px;
     margin-bottom: 43px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 285px;
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 687px;
   }
 
-  .u-section-1 .u-form-3 {
-    width: 402px;
+  .u-section-1 .u-group-1 {
+    margin-top: 41px;
+    width: 273px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 403px;
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-1 .u-text-8 {
-    margin-top: 47px;
-  }
-
-  .u-section-1 .u-text-9 {
-    margin-top: 39px;
-    margin-right: 197px;
+  .u-section-1 .u-text-3 {
+    margin-right: 0;
     margin-left: 0;
   }
 
+  .u-section-1 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 687px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 0;
+    margin-left: -108px;
+    margin-right: -108px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-form-1 {
+    width: 270px;
+    margin-top: 6px;
+  }
+
+  .u-section-1 .u-form-2 {
+    width: 270px;
+  }
+
+  .u-section-1 .u-text-9 {
+    margin-right: 22px;
+    margin-left: 49px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 687px;
+  }
+
   .u-section-1 .u-text-10 {
-    margin-right: 56px;
-    margin-left: 272px;
+    margin-top: 48px;
   }
 
-  .u-section-1 .u-text-11 {
-    margin-top: 26px;
-    margin-right: 206px;
-    margin-left: 19px;
+  .u-section-1 .u-form-3 {
+    height: 114px;
+    margin-top: 31px;
   }
 
-  .u-section-1 .u-text-12 {
-    margin-top: -36px;
-    margin-right: 47px;
-    margin-left: 263px;
+  .u-section-1 .u-text-13 {
+    margin-top: 47px;
+    margin-right: 19px;
+    margin-left: 205px;
+  }
+
+  .u-section-1 .u-text-14 {
+    margin-right: 120px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-text-15 {
+    margin-top: 39px;
+    margin-right: 109px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-top: -38px;
+    margin-right: 21px;
+    margin-left: 207px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 808px;
+    min-height: 788px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 71px;
+    margin-bottom: 39px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 674px;
+    min-height: 679px;
   }
 
-  .u-section-1 .u-text-1 {
+  .u-section-1 .u-group-1 {
+    min-height: 524px;
+    margin-top: 35px;
+    margin-right: initial;
+    margin-left: initial;
     width: auto;
-    margin-left: 32px;
-    margin-right: 32px;
   }
 
-  .u-section-1 .u-form-1 {
-    width: 376px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: -28px;
-  }
-
-  .u-section-1 .u-form-2 {
-    width: 376px;
-    margin-top: 28px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 206px;
+  .u-section-1 .u-text-2 {
+    font-size: 0.875rem;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 267px;
+    min-height: 679px;
   }
 
-  .u-section-1 .u-form-3 {
-    width: 316px;
+  .u-section-1 .u-text-5 {
+    margin-left: -132px;
+    margin-right: -132px;
   }
 
-  .u-section-1 .u-text-7 {
-    margin-top: -12px;
+  .u-section-1 .u-text-6 {
+    margin-top: 18px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 407px;
+  .u-section-1 .u-form-1 {
+    width: 230px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 24px;
+  }
+
+  .u-section-1 .u-form-2 {
+    width: 230px;
   }
 
   .u-section-1 .u-text-9 {
-    margin-right: 121px;
+    width: auto;
+    margin-left: 23px;
+    margin-right: 23px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 679px;
   }
 
   .u-section-1 .u-text-10 {
-    margin-right: 13px;
-    margin-left: 229px;
+    margin-top: 45px;
   }
 
-  .u-section-1 .u-text-11 {
-    margin-top: 52px;
-    margin-right: 113px;
-    margin-left: 9px;
+  .u-section-1 .u-form-3 {
+    width: 230px;
+    margin-top: 6px;
   }
 
   .u-section-1 .u-text-12 {
-    margin-top: -38px;
-    margin-right: 10px;
-    margin-left: 226px;
+    margin-top: 65px;
+  }
+
+  .u-section-1 .u-text-13 {
+    margin-top: 55px;
+    margin-right: 11px;
+    margin-left: 173px;
+  }
+
+  .u-section-1 .u-text-14 {
+    font-size: 1.125rem;
+    margin-top: -25px;
+    margin-right: 91px;
+    margin-left: 20px;
+  }
+
+  .u-section-1 .u-text-15 {
+    font-size: 1.125rem;
+    margin-top: 20px;
+    margin-right: 75px;
+    margin-left: 20px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-top: -35px;
+    margin-right: 11px;
+    margin-left: 173px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1179px;
+    min-height: 1836px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    position: relative;
+    margin-bottom: 60px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 710px;
+    min-height: 489px;
   }
 
-  .u-section-1 .u-text-1 {
-    width: 293px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 210px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 265px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
+  .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
+  .u-section-1 .u-group-1 {
+    min-height: 395px;
+    margin-top: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 692px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: 455px;
+    margin-top: 31px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-text-6 {
-    margin-top: 39px;
+    margin-top: 19px;
   }
 
-  .u-section-1 .u-form-3 {
-    margin-top: -23px;
-  }
-
-  .u-section-1 .u-text-7 {
-    margin-top: -9px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 268px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding: 9px 10px;
+  .u-section-1 .u-form-1 {
+    width: 280px;
   }
 
   .u-section-1 .u-text-8 {
     margin-top: 18px;
   }
 
-  .u-section-1 .u-text-9 {
-    margin-top: 23px;
-    margin-right: 372px;
-    margin-left: 153px;
+  .u-section-1 .u-form-2 {
+    width: 280px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 296px;
   }
 
   .u-section-1 .u-text-10 {
-    margin-right: 194px;
-    margin-left: 441px;
+    margin-top: 19px;
   }
 
-  .u-section-1 .u-text-11 {
-    margin-top: 23px;
+  .u-section-1 .u-text-13 {
+    margin-top: 34px;
+    margin-right: 233px;
+    margin-left: 422px;
+  }
+
+  .u-section-1 .u-text-14 {
     margin-right: 382px;
-    margin-left: 163px;
+    margin-left: 231px;
   }
 
-  .u-section-1 .u-text-12 {
-    margin-right: 186px;
-    margin-left: 434px;
+  .u-section-1 .u-text-15 {
+    margin-top: 32px;
+    margin-right: 365px;
+    margin-left: 231px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-right: 241px;
+    margin-bottom: -220px;
+    margin-left: 430px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1247px;
+    min-height: 1728px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 87px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 705px;
+    min-height: 467px;
   }
 
-  .u-section-1 .u-text-1 {
-    width: 287px;
-    margin-top: 9px;
+  .u-section-1 .u-group-1 {
+    min-height: 428px;
+    width: 307px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 15px;
-  }
-
-  .u-section-1 .u-form-1 {
-    width: 336px;
-    margin-top: -27px;
-  }
-
-  .u-section-1 .u-form-2 {
-    width: 340px;
-    margin-top: 13px;
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 26px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: -248px;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: auto;
-    margin-right: 46px;
-    margin-left: 41px;
+    margin-top: 35px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 236px;
+    min-height: 713px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-top: 9px;
-    padding-bottom: 13px;
+  .u-section-1 .u-text-5 {
+    width: 221px;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-top: 14px;
-  }
-
-  .u-section-1 .u-form-3 {
-    margin-top: -19px;
-  }
-
-  .u-section-1 .u-text-7 {
-    margin-top: -28px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 218px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-top: 8px;
-    padding-left: 0;
-    padding-right: 0;
+  .u-section-1 .u-form-1 {
+    margin-top: 8px;
   }
 
   .u-section-1 .u-text-8 {
-    font-size: 1.5rem;
-    margin-top: 11px;
+    margin-top: 15px;
   }
 
   .u-section-1 .u-text-9 {
-    margin-top: 21px;
-    margin-right: 154px;
-    margin-left: 28px;
+    width: 241px;
+    margin-top: 19px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 343px;
   }
 
   .u-section-1 .u-text-10 {
-    margin-right: 44px;
-    margin-left: 268px;
+    margin-top: 13px;
   }
 
-  .u-section-1 .u-text-11 {
-    margin-top: 16px;
-    margin-right: 152px;
-    margin-left: 28px;
+  .u-section-1 .u-form-3 {
+    width: 280px;
+    margin-top: 9px;
   }
 
   .u-section-1 .u-text-12 {
-    margin-top: -28px;
-    margin-right: 43px;
-    margin-left: 267px;
+    margin-top: 21px;
+  }
+
+  .u-section-1 .u-text-13 {
+    margin-top: 29px;
+    margin-right: 38px;
+    margin-left: 226px;
+  }
+
+  .u-section-1 .u-text-14 {
+    margin-right: 186px;
+    margin-left: 35px;
+  }
+
+  .u-section-1 .u-text-15 {
+    margin-top: 37px;
+    margin-right: 168px;
+    margin-left: 35px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-right: 46px;
+    margin-bottom: -176px;
+    margin-left: 234px;
   }
 }
