--- a/static/css/stay_sharp/Main.css
+++ b/static/css/stay_sharp/Main.css
@@ -1,5 +1,6 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("/static/images/stay_sharp/tormek_t-4_bushcraft.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -7,68 +8,57 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-weight: normal;
-  font-size: 4.5rem;
-  margin: 108px 209px 0 193px;
+  width: 818px;
+  font-size: 6rem;
+  font-weight: 700;
+  background-image: none;
+  margin: 136px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 108px 129px 60px 193px;
+  width: 394px;
+  font-size: 1.875rem;
+  margin: 29px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  width: 401px;
-  margin: 24px auto 60px;
+  margin: 33px 129px 0 193px;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 78px 381px 0 445px;
+  width: 401px;
+  margin: 42px auto 0;
+}
+
+.u-section-1 .u-text-5 {
+  width: 394px;
+  font-weight: 700;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
-  border-style: none;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
   background-image: none;
-  margin: 34px 475px 60px auto;
+  margin: 46px auto 60px;
 }
 
 @media (max-width: 1399px) {
-   .u-section-1 {
-    background-position: 50% 50%;
-  }
-
-  .u-section-1 .u-text-1 {
-    width: 818px;
-    font-weight: 700;
-    font-size: 6rem;
-    margin-top: 148px;
+  .u-section-1 .u-text-3 {
+    width: 858px;
+    margin-top: 38px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 858px;
-    margin: 69px auto 0;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 53px;
-    margin-bottom: 0;
   }
 
   .u-section-1 .u-text-4 {
-    width: 314px;
-    margin-top: 69px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 53px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 40px;
-    margin-right: auto;
+    border-style: none;
   }
 }
 
@@ -77,7 +67,7 @@
     width: 768px;
   }
 
-  .u-section-1 .u-text-2 {
+  .u-section-1 .u-text-3 {
     width: 768px;
   }
 }
@@ -85,10 +75,10 @@
 @media (max-width: 767px) {
   .u-section-1 .u-text-1 {
     width: 767px;
-    font-size: 3.75rem;
+    font-size: 4.5rem;
   }
 
-  .u-section-1 .u-text-2 {
+  .u-section-1 .u-text-3 {
     width: 767px;
   }
 }
@@ -100,10 +90,23 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 375px;
+    width: auto;
+    font-size: 1.5rem;
+    margin-top: 36px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-3 {
+    width: 375px;
+    margin-top: 40px;
+  }
+
+  .u-section-1 .u-text-4 {
     width: 295px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: 375px;
   }
 }
