--- a/templates/Choose-the-angle.html
+++ b/templates/Choose-the-angle.html
@@ -19,8 +19,8 @@
 
 {% block section1 %}
     <section
-            class="skrollable u-border-2 u-border-palette-3-base u-clearfix u-image u-lightbox u-parallax u-shading u-section-1"
-            id="choose-the-angle" data-image-width="1553" data-image-height="1000">
+            class="skrollable u-clearfix u-image u-lightbox u-parallax u-shading u-section-1" id="choose-the-angle"
+         data-image-width="1553" data-image-height="1000">
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
                 <div class="u-layout">
