--- a/templates/registration/activation_done.html
+++ b/templates/registration/activation_done.html
@@ -36,7 +36,7 @@
                                             Messenges:</h5>
                                         <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-palette-3-light-2 u-text-3">
                                             &nbsp;--------------</h5>
-                                        {% if not bad_signature %}
+                                        {% if not not_match %}
                                             <p class="u-align-center u-hover-feature u-text u-text-palette-3-light-2 u-text-4"
                                                data-animation-name="bounceIn" data-animation-duration="1000"
                                                data-animation-direction="">
@@ -45,9 +45,11 @@
                                                 <br>
                                                 <span style="font-weight: 400;" class="u-text-palette-4-light-2">Activation done!</span>
                                                 <br>
+                                                <span style="font-weight: 400;" class="u-text-palette-4-light-2">Login done!</span>
                                             </p>
                                             <p class="u-align-center u-text u-text-palette-3-light-2 u-text-5">
-                                                <span class="u-text-palette-4-light-2"></span>You can Log in and
+                                                <br>
+                                                <span class="u-text-palette-4-light-2"></span>You can
                                                 work!<br>
                                             </p>
                                         {% else %}
