--- a/staticfiles/css/stay_sharp/Calculation.css
+++ b/staticfiles/css/stay_sharp/Calculation.css
@@ -1,6 +1,5 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  background-position: 50% 50%;
   min-height: 783px;
 }
 
@@ -319,6 +318,7 @@
 
 @media (max-width: 1399px) {
    .u-section-1 {
+    background-position: 50% 50%;
     min-height: 773px;
   }
 
@@ -730,7 +730,6 @@
   }
 } .u-section-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/317024594-02.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -772,6 +771,10 @@
 }
 
 @media (max-width: 1399px) {
+   .u-section-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-2 .u-layout-wrap-1 {
     width: 1083px;
     margin-bottom: 33px;
@@ -914,233 +917,65 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 368px;
+  min-height: 100vh;
 }
 
 .u-section-3 .u-layout-wrap-1 {
-  margin: 34px 0 20px;
+  margin-top: 27px;
+  margin-bottom: 27px;
 }
 
 .u-section-3 .u-layout-cell-1 {
-  min-height: 330px;
+  min-height: 793px;
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 0 22px;
+  padding: 13px 21px 11px;
 }
 
 .u-section-3 .u-text-1 {
-  font-size: 1.5rem;
-  font-weight: normal;
-  margin: 35px 920px 0 74px;
+  font-size: 2.25rem;
+  margin: 84px 0 0;
 }
 
 .u-section-3 .u-text-2 {
-  font-size: 1.25rem;
-  margin: 20px 438px 0 -2px;
-}
-
-.u-section-3 .u-list-icon-1 {
-  color: rgb(255, 167, 84) !important;
-}
-
-@media (max-width: 1399px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 345px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: 24px;
-    margin-bottom: 29px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 308px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding: 14px 15px 14px 25px;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-top: -1px;
-    margin-right: auto;
-    margin-left: 198px;
-  }
-
-  .u-section-3 .u-text-2 {
-    width: auto;
-    margin-right: 398px;
-  }
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 305px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 254px;
-  }
-
-  .u-section-3 .u-text-1 {
-    font-size: 1.25rem;
-    font-weight: 400;
-    margin-right: 638px;
-    margin-left: 108px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-right: 298px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 296px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: 17px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 258px;
-  }
-
-  .u-section-3 .u-text-1 {
-    margin-top: 20px;
-    margin-right: 552px;
-    margin-left: 135px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-top: 13px;
-    margin-right: 203px;
-    margin-left: 7px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 297px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: 30px;
-    margin-bottom: 60px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 172px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-text-1 {
-    margin-right: 528px;
-    margin-left: 74px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-top: 20px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 290px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 256px;
-  }
-
-  .u-section-3 .u-text-1 {
-    margin-top: -1px;
-    margin-left: auto;
-    margin-right: 182px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-top: 13px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-} .u-section-4 {
-  background-image: none;
-}
-
-.u-section-4 .u-sheet-1 {
-  min-height: 435px;
-}
-
-.u-section-4 .u-layout-wrap-1 {
-  width: 1123px;
-  margin: 27px 40px 27px auto;
-}
-
-.u-section-4 .u-layout-cell-1 {
-  min-height: 381px;
-}
-
-.u-section-4 .u-container-layout-1 {
-  padding: 30px 21px;
-}
-
-.u-section-4 .u-text-1 {
-  font-size: 2.25rem;
-  margin: 0 auto 0 9px;
-}
-
-.u-section-4 .u-text-2 {
-  font-weight: 700;
   line-height: 1.8;
-  font-style: italic;
+  font-size: 1.25rem;
+  font-weight: 700;
+  font-style: normal;
+  margin: 45px 0 0;
+}
+
+.u-section-3 .u-text-3 {
+  line-height: 1.8;
   font-size: 1.125rem;
-  margin: 27px 18px 0 0;
+  font-weight: normal;
+  font-style: normal;
+  margin: 0;
 }
 
-.u-section-4 .u-layout-cell-2 {
-  min-height: 381px;
-}
-
-.u-section-4 .u-container-layout-2 {
-  padding: 13px 30px 11px;
-}
-
-.u-section-4 .u-form-1 {
+.u-section-3 .u-form-1 {
   height: 356px;
   width: 502px;
-  margin: 0 auto;
+  margin: 41px auto 0;
 }
 
-.u-section-4 .u-label-1 {
+.u-section-3 .u-label-1 {
   font-weight: 700;
   font-size: 1rem;
 }
 
-.u-section-4 .u-label-2 {
+.u-section-3 .u-label-2 {
   font-weight: 700;
   font-size: 1rem;
 }
 
-.u-section-4 .u-label-3 {
+.u-section-3 .u-label-3 {
   font-weight: 700;
   font-size: 1rem;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-3 .u-btn-1 {
   background-image: none;
   text-transform: none;
   font-size: 1rem;
@@ -1149,220 +984,177 @@
   padding-right: 0;
 }
 
+.u-section-3 .u-layout-cell-2 {
+  min-height: 793px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px 21px;
+}
+
 @media (max-width: 1399px) {
-  .u-section-4 .u-layout-wrap-1 {
-    margin-right: 17px;
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 40px;
+    margin-bottom: 29px;
   }
 
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 778px;
   }
 
-  .u-section-4 .u-text-1 {
-    width: auto;
-    margin-top: 60px;
-    margin-left: 187px;
+  .u-section-3 .u-container-layout-1 {
+    padding: 27px 12px 30px;
   }
 
-  .u-section-4 .u-text-2 {
-    width: 413px;
-    margin-top: 45px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-container-layout-2 {
-    padding: 27px 12px 0;
-  }
-
-  .u-section-4 .u-form-1 {
-    height: 359px;
-  }
-
-  .u-section-4 .u-btn-1 {
+  .u-section-3 .u-btn-1 {
     border-style: none;
     text-transform: uppercase;
     font-size: 1.125rem;
   }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 778px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 440px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 867px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    width: 940px;
-    margin-right: 0;
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 24px;
+    margin-bottom: 24px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 319px;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 819px;
   }
 
-  .u-section-4 .u-text-1 {
-    margin-left: 154px;
+  .u-section-3 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  .u-section-4 .u-text-2 {
-    font-weight: normal;
+  .u-section-3 .u-form-1 {
+    width: 428px;
   }
 
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 319px;
-  }
-
-  .u-section-4 .u-form-1 {
-    width: 446px;
-  }
-
-  .u-section-4 .u-btn-1 {
+  .u-section-3 .u-btn-1 {
     width: 102%;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 819px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-3 .u-sheet-1 {
     min-height: 221px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    width: 720px;
-    margin-left: 0;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 760px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 386px;
-  }
-
-  .u-section-4 .u-text-1 {
-    margin-left: 126px;
-  }
-
-  .u-section-4 .u-text-2 {
+  .u-section-3 .u-text-3 {
     width: auto;
-    margin-top: 16px;
-    margin-right: 17px;
-    margin-left: 67px;
+    margin-left: 26px;
+    margin-right: 26px;
   }
 
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 100px;
+  .u-section-3 .u-form-1 {
+    width: 342px;
   }
 
-  .u-section-4 .u-container-layout-2 {
-    padding-left: 0;
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 499px;
   }
 
-  .u-section-4 .u-form-1 {
-    width: 360px;
+  .u-section-3 .u-container-layout-2 {
+    padding-top: 9px;
+    padding-bottom: 9px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 631px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 1731px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    margin-top: 21px;
-    margin-bottom: 21px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 657px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 219px;
-  }
-
-  .u-section-4 .u-text-1 {
-    margin-top: 0;
-    margin-left: auto;
-  }
-
-  .u-section-4 .u-text-2 {
-    width: 321px;
-    margin-top: 18px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 370px;
-  }
-
-  .u-section-4 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-1 {
     padding-top: 2px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
-  .u-section-4 .u-form-1 {
-    margin-right: 211px;
-    margin-left: 221px;
-    width: 325px;
-  }
-
-  .u-section-4 .u-btn-1 {
+  .u-section-3 .u-btn-1 {
     width: 50%;
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 997px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding: 0 10px;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 733px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 1209px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 197px;
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 12px;
+    margin-bottom: 12px;
   }
 
-  .u-section-4 .u-container-layout-1 {
-    padding-top: 19px;
-    padding-bottom: 19px;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 877px;
   }
 
-  .u-section-4 .u-text-1 {
-    font-size: 1.875rem;
-  }
-
-  .u-section-4 .u-text-2 {
-    font-size: 1.25rem;
-    width: auto;
-    margin-top: 0;
-    margin-left: 27px;
-    margin-right: 27px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 509px;
-  }
-
-  .u-section-4 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-1 {
     padding-top: 16px;
     padding-right: 0;
   }
 
-  .u-section-4 .u-form-1 {
-    height: 475px;
-    width: 322px;
-    margin-top: 1px;
-    margin-left: auto;
-    margin-right: auto;
+  .u-section-3 .u-text-1 {
+    font-size: 1.875rem;
   }
 
-  .u-section-4 .u-label-1 {
+  .u-section-3 .u-text-3 {
+    margin-right: 20px;
+    margin-left: 15px;
+  }
+
+  .u-section-3 .u-label-1 {
     font-size: 1.125rem;
   }
 
-  .u-section-4 .u-label-2 {
+  .u-section-3 .u-label-2 {
     font-size: 1.125rem;
   }
 
-  .u-section-4 .u-label-3 {
+  .u-section-3 .u-label-3 {
     font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 487px;
   }
 }
