--- a/staticfiles/css/stay_sharp/Login.css
+++ b/staticfiles/css/stay_sharp/Login.css
@@ -1,5 +1,6 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -245,10 +246,6 @@
 }
 
 @media (max-width: 1399px) {
-   .u-section-1 {
-    background-position: 50% 50%;
-  }
-
   .u-section-1 .u-sheet-1 {
     min-height: 762px;
   }
@@ -358,6 +355,10 @@
 }
 
 @media (max-width: 1199px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
     min-height: 811px;
   }
@@ -545,7 +546,7 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 464px;
+    min-height: 277px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -553,8 +554,9 @@
   }
 
   .u-section-1 .u-group-1 {
+    min-height: 256px;
     width: 451px;
-    margin-top: 0;
+    margin-top: 8px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -583,12 +585,11 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1308px;
+    min-height: 1377px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
     margin-top: 81px;
-    margin-bottom: 0;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -600,15 +601,17 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 227px;
+    min-height: 271px;
   }
 
   .u-section-1 .u-container-layout-2 {
-    padding: 0 20px;
+    padding: 0;
   }
 
   .u-section-1 .u-group-1 {
+    min-height: 268px;
     width: 355px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -658,7 +661,9 @@
 
   .u-section-1 .u-group-2 {
     min-height: 423px;
-    width: 355px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-container-layout-5 {
@@ -679,6 +684,7 @@
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
 } .u-section-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
+  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -759,122 +765,106 @@
   padding: 5px 27px;
 }
 
-.u-section-2 .u-group-1 {
-  min-height: 230px;
-  margin-top: -10px;
-  margin-bottom: 0;
-  height: auto;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 10px 30px;
-}
-
-.u-section-2 .u-text-2 {
-  font-weight: 400;
-  font-size: 1.125rem;
-  margin: 0 1px;
-}
-
-.u-section-2 .u-text-3 {
-  background-image: none;
-  font-size: 1.25rem;
-  margin: 0;
-}
-
-.u-section-2 .u-text-4 {
+.u-section-2 .u-btn-2 {
+  border-style: none none solid;
   font-size: 1rem;
-  margin: 0 1px;
-}
-
-.u-section-2 .u-text-5 {
-  font-size: 1rem;
-  margin: 0 1px;
+  font-weight: normal;
+  margin: 33px auto 0;
+  padding: 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
   min-height: 724px;
 }
 
-.u-section-2 .u-container-layout-3 {
-  padding: 30px;
+.u-section-2 .u-container-layout-2 {
+  padding: 30px 24px;
 }
 
-.u-section-2 .u-text-6 {
-  margin: 30px 17px 0;
+.u-section-2 .u-text-2 {
+  margin: 30px 23px 0;
 }
 
-.u-section-2 .u-text-7 {
+.u-section-2 .u-text-3 {
   background-image: none;
-  margin: 0 0 0 6px;
+  margin: 0 6px 0 12px;
 }
 
-.u-section-2 .u-text-8 {
-  font-size: 1.125rem;
-  font-weight: 400;
-  margin: 0;
-}
-
-.u-section-2 .u-btn-2 {
-  border-style: none none solid;
-  font-weight: normal;
-  font-size: 1.25rem;
-  margin: 30px auto 0;
-  padding: 0;
+.u-section-2 .u-text-4 {
+  font-size: 1rem;
+  margin: 9px 0 0;
 }
 
 .u-section-2 .u-layout-cell-3 {
   min-height: 724px;
 }
 
-.u-section-2 .u-container-layout-4 {
-  padding: 40px 30px;
+.u-section-2 .u-container-layout-3 {
+  padding: 40px 29px;
 }
 
-.u-section-2 .u-group-2 {
+.u-section-2 .u-group-1 {
   height: auto;
   min-height: 554px;
-  margin-top: 20px;
-  margin-bottom: 0;
+  width: 347px;
+  margin: 20px auto 0;
 }
 
-.u-section-2 .u-container-layout-5 {
+.u-section-2 .u-container-layout-4 {
   padding: 0 20px 30px;
 }
 
-.u-section-2 .u-text-9 {
+.u-section-2 .u-text-5 {
   background-image: none;
   margin: 0;
 }
 
-.u-section-2 .u-text-10 {
+.u-section-2 .u-text-6 {
   background-image: none;
   margin-left: 1px;
   margin-right: 1px;
   margin-top: 0;
 }
 
-.u-section-2 .u-text-11 {
+.u-section-2 .u-text-7 {
   font-size: 1.25rem;
   margin: 0 1px 0 0;
 }
 
-.u-section-2 .u-text-12 {
+.u-section-2 .u-text-8 {
   font-size: 1rem;
   margin: 0;
 }
 
-.u-section-2 .u-text-13 {
+.u-section-2 .u-text-9 {
   margin: 0;
 }
 
-.u-section-2 .u-text-14 {
+.u-section-2 .u-text-10 {
   font-size: 1.25rem;
   margin: 0;
 }
 
-.u-section-2 .u-text-15 {
+.u-section-2 .u-text-11 {
   font-size: 1rem;
+  margin: 0 1px 0 0;
+}
+
+.u-section-2 .u-text-12 {
+  margin: 0;
+}
+
+.u-section-2 .u-text-13 {
+  font-size: 1.125rem;
+  margin: 0;
+}
+
+.u-section-2 .u-text-14 {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.u-section-2 .u-text-15 {
   margin: 0 1px 0 0;
 }
 
@@ -883,33 +873,11 @@
 }
 
 .u-section-2 .u-text-17 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-2 .u-text-18 {
-  font-size: 1rem;
-  margin: 0;
-}
-
-.u-section-2 .u-text-19 {
-  margin: 0 1px 0 0;
-}
-
-.u-section-2 .u-text-20 {
-  margin: 0;
-}
-
-.u-section-2 .u-text-21 {
   font-size: 1rem;
   margin: 0;
 }
 
 @media (max-width: 1399px) {
-   .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 762px;
   }
@@ -918,99 +886,77 @@
     min-height: 715px;
   }
 
-  .u-section-2 .u-form-1 {
-    margin-top: 18px;
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 715px;
   }
 
-  .u-section-2 .u-group-1 {
-    margin-top: 0;
-    height: auto;
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 28px;
+    padding-right: 28px;
   }
 
   .u-section-2 .u-text-2 {
+    width: auto;
+    margin-top: 33px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-3 {
     width: auto;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-2 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-text-5 {
-    padding-left: 0;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 715px;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 28px;
-    padding-right: 28px;
-  }
-
-  .u-section-2 .u-text-6 {
-    margin-left: 4px;
-    margin-right: 4px;
-  }
-
-  .u-section-2 .u-text-7 {
-    width: auto;
-    margin-left: 0;
-  }
-
-  .u-section-2 .u-text-8 {
-    width: auto;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 28px;
+    margin-top: 6px;
   }
 
   .u-section-2 .u-layout-cell-3 {
     min-height: 715px;
   }
 
-  .u-section-2 .u-container-layout-4 {
+  .u-section-2 .u-container-layout-3 {
     padding-top: 30px;
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-group-2 {
+  .u-section-2 .u-group-1 {
     min-height: 589px;
     margin-top: 0;
+    width: 322px;
     height: auto;
   }
 
-  .u-section-2 .u-text-10 {
+  .u-section-2 .u-text-6 {
     margin-right: 0;
     margin-bottom: 0;
     margin-left: 0;
   }
 
-  .u-section-2 .u-text-11 {
+  .u-section-2 .u-text-7 {
     font-size: 1.125rem;
     margin-right: 0;
   }
 
-  .u-section-2 .u-text-14 {
+  .u-section-2 .u-text-10 {
     font-size: 1.125rem;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-right: 0;
   }
 
   .u-section-2 .u-text-15 {
     margin-right: 0;
   }
-
-  .u-section-2 .u-text-19 {
-    margin-right: 0;
-  }
 }
 
 @media (max-width: 1199px) {
+   .u-section-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-2 .u-sheet-1 {
     min-height: 811px;
   }
@@ -1029,62 +975,36 @@
     padding-bottom: 16px;
   }
 
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-
   .u-section-2 .u-form-1 {
-    width: 260px;
-    margin-top: 12px;
-  }
-
-  .u-section-2 .u-group-1 {
-    min-height: 249px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-text-3 {
-    width: auto;
-    font-size: 1.125rem;
-  }
-
-  .u-section-2 .u-text-4 {
-    width: auto;
-  }
-
-  .u-section-2 .u-text-5 {
-    width: auto;
+    width: 253px;
   }
 
   .u-section-2 .u-layout-cell-2 {
     min-height: 738px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-2 .u-container-layout-2 {
     padding-left: 17px;
     padding-right: 17px;
   }
 
-  .u-section-2 .u-text-6 {
+  .u-section-2 .u-text-2 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 33px;
   }
 
   .u-section-2 .u-layout-cell-3 {
     min-height: 738px;
   }
 
-  .u-section-2 .u-container-layout-4 {
+  .u-section-2 .u-container-layout-3 {
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .u-section-2 .u-group-1 {
+    margin-top: 33px;
+    width: 256px;
   }
 }
 
@@ -1107,75 +1027,62 @@
     padding-bottom: 0;
   }
 
-  .u-section-2 .u-text-1 {
-    margin-top: 1px;
-  }
-
   .u-section-2 .u-form-1 {
-    width: 236px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 196px;
   }
 
   .u-section-2 .u-layout-cell-2 {
     min-height: 680px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-2 .u-container-layout-2 {
     padding-top: 17px;
     padding-bottom: 17px;
   }
 
-  .u-section-2 .u-btn-2 {
-    margin-top: 31px;
-  }
-
   .u-section-2 .u-layout-cell-3 {
-    min-height: 100px;
+    min-height: 680px;
   }
 
-  .u-section-2 .u-group-2 {
-    margin-top: 31px;
+  .u-section-2 .u-group-1 {
+    margin-top: 20px;
+    width: 198px;
   }
 
-  .u-section-2 .u-container-layout-5 {
+  .u-section-2 .u-container-layout-4 {
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-text-12 {
+  .u-section-2 .u-text-8 {
     font-size: 0.875rem;
   }
 
-  .u-section-2 .u-text-15 {
+  .u-section-2 .u-text-11 {
     font-size: 0.875rem;
   }
 
-  .u-section-2 .u-text-18 {
+  .u-section-2 .u-text-14 {
     font-size: 0.875rem;
   }
 
-  .u-section-2 .u-text-21 {
+  .u-section-2 .u-text-17 {
     font-size: 0.875rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1678px;
+    min-height: 1244px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    margin-top: 18px;
-    margin-bottom: 18px;
+    margin-top: 20px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 601px;
+    min-height: 549px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -1183,84 +1090,75 @@
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 0;
+    width: auto;
+    margin-top: 24px;
   }
 
   .u-section-2 .u-form-1 {
     width: 280px;
+    margin-top: 25px;
   }
 
-  .u-section-2 .u-group-1 {
-    min-height: 199px;
-    width: 381px;
-    margin-top: -9px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-2 .u-text-2 {
+  .u-section-2 .u-btn-2 {
     margin-top: 30px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 154px;
+    min-height: 164px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-2 .u-container-layout-2 {
     padding: 8px 1px 0;
   }
 
-  .u-section-2 .u-text-6 {
-    width: auto;
-    margin-top: 12px;
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-2 .u-text-7 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-2 .u-text-8 {
-    margin-top: -1px;
-    margin-left: 18px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 15px;
-  }
-
   .u-section-2 .u-layout-cell-3 {
-    min-height: 539px;
+    min-height: 492px;
   }
 
-  .u-section-2 .u-container-layout-4 {
+  .u-section-2 .u-container-layout-3 {
     padding: 0 10px;
   }
 
-  .u-section-2 .u-group-2 {
+  .u-section-2 .u-group-1 {
     min-height: 405px;
-    width: 400px;
-    margin-top: 0;
-    margin-left: auto;
-    margin-right: auto;
+    width: 401px;
+    margin-top: 19px;
   }
 
-  .u-section-2 .u-container-layout-5 {
+  .u-section-2 .u-container-layout-4 {
     padding-left: 0;
     padding-right: 0;
   }
 
-  .u-section-2 .u-text-9 {
+  .u-section-2 .u-text-5 {
     width: auto;
     margin-top: 29px;
     margin-left: 10px;
     margin-right: 10px;
   }
 
-  .u-section-2 .u-text-10 {
+  .u-section-2 .u-text-6 {
     width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-10 {
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -1271,7 +1169,7 @@
   }
 
   .u-section-2 .u-text-12 {
-    margin-left: 10px;
+    width: auto;
     margin-right: 10px;
   }
 
@@ -1291,31 +1189,11 @@
   }
 
   .u-section-2 .u-text-16 {
-    width: auto;
+    margin-left: 10px;
     margin-right: 10px;
   }
 
   .u-section-2 .u-text-17 {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .u-section-2 .u-text-18 {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .u-section-2 .u-text-19 {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .u-section-2 .u-text-20 {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .u-section-2 .u-text-21 {
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -1323,81 +1201,72 @@
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1638px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 57px;
-    margin-bottom: 1px;
+    min-height: 1223px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 616px;
+    min-height: 529px;
   }
 
   .u-section-2 .u-container-layout-1 {
     padding: 10px 20px;
   }
 
-  .u-section-2 .u-group-1 {
-    min-height: 226px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-2 .u-text-1 {
+    width: 126px;
+    margin-top: 41px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+  .u-section-2 .u-form-1 {
+    margin-top: 0;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 132px;
+    min-height: 182px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-2 .u-container-layout-2 {
     padding-top: 0;
     padding-left: 0;
     padding-right: 0;
   }
 
-  .u-section-2 .u-text-6 {
-    margin-top: 3px;
-    margin-left: 1px;
-    margin-right: 1px;
-  }
-
-  .u-section-2 .u-text-7 {
-    margin-left: 1px;
-    margin-right: 1px;
-  }
-
-  .u-section-2 .u-text-8 {
-    margin-top: 0;
-    margin-left: 1px;
-    margin-right: 1px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 17px;
-  }
-
   .u-section-2 .u-layout-cell-3 {
-    min-height: 472px;
+    min-height: 474px;
   }
 
-  .u-section-2 .u-group-2 {
+  .u-section-2 .u-group-1 {
     min-height: 426px;
     width: 355px;
   }
 
-  .u-section-2 .u-container-layout-5 {
+  .u-section-2 .u-container-layout-4 {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  .u-section-2 .u-text-9 {
+  .u-section-2 .u-text-5 {
     margin-top: 30px;
+    margin-right: 0;
+    margin-left: 9px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-right: 0;
+    margin-left: 9px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-right: 0;
+    margin-left: 9px;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-right: 0;
+    margin-left: 9px;
+  }
+
+  .u-section-2 .u-text-9 {
     margin-right: 0;
     margin-left: 9px;
   }
@@ -1441,28 +1310,9 @@
     margin-right: 0;
     margin-left: 9px;
   }
-
-  .u-section-2 .u-text-18 {
-    margin-right: 0;
-    margin-left: 9px;
-  }
-
-  .u-section-2 .u-text-19 {
-    margin-right: 0;
-    margin-left: 9px;
-  }
-
-  .u-section-2 .u-text-20 {
-    margin-right: 0;
-    margin-left: 9px;
-  }
-
-  .u-section-2 .u-text-21 {
-    margin-right: 0;
-    margin-left: 9px;
-  }
 } .u-section-3 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
+  background-position: 50% 50%;
 }
 
 .u-section-3 .u-sheet-1 {
@@ -1522,10 +1372,18 @@
   padding: 5px 27px;
 }
 
+.u-section-3 .u-btn-2 {
+  border-style: none none solid;
+  font-size: 1rem;
+  font-weight: normal;
+  margin: 6px auto 0;
+  padding: 0;
+}
+
 .u-section-3 .u-group-1 {
   height: auto;
   min-height: 124px;
-  margin-top: 6px;
+  margin-top: 13px;
   margin-bottom: 0;
 }
 
@@ -1550,20 +1408,6 @@
   margin: 0 3px 0 0;
 }
 
-.u-section-3 .u-text-5 {
-  font-size: 1.125rem;
-  font-weight: 400;
-  margin: 13px 0 0;
-}
-
-.u-section-3 .u-btn-2 {
-  border-style: none none solid;
-  font-weight: normal;
-  font-size: 1.25rem;
-  margin: 16px auto 0;
-  padding: 0;
-}
-
 .u-section-3 .u-layout-cell-2 {
   min-height: 715px;
 }
@@ -1573,10 +1417,6 @@
 }
 
 @media (max-width: 1399px) {
-   .u-section-3 {
-    background-position: 50% 50%;
-  }
-
   .u-section-3 .u-sheet-1 {
     min-height: 762px;
   }
@@ -1609,10 +1449,6 @@
     margin-right: 19px;
   }
 
-  .u-section-3 .u-text-5 {
-    width: auto;
-  }
-
   .u-section-3 .u-container-layout-3 {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -1620,6 +1456,10 @@
 }
 
 @media (max-width: 1199px) {
+   .u-section-3 {
+    background-position: 50% 50%;
+  }
+
   .u-section-3 .u-sheet-1 {
     min-height: 811px;
   }
@@ -1636,6 +1476,10 @@
     padding-left: 60px;
     padding-right: 60px;
     padding-bottom: 16px;
+  }
+
+  .u-section-3 .u-btn-2 {
+    margin-top: 17px;
   }
 
   .u-section-3 .u-group-1 {
@@ -1660,10 +1504,6 @@
   .u-section-3 .u-text-4 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-top: 17px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -1730,6 +1570,10 @@
     margin-right: auto;
   }
 
+  .u-section-3 .u-btn-2 {
+    margin-top: 31px;
+  }
+
   .u-section-3 .u-group-1 {
     width: 401px;
     margin-top: -9px;
@@ -1744,10 +1588,6 @@
 
   .u-section-3 .u-text-2 {
     margin-top: 30px;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-top: 31px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -1790,6 +1630,7 @@
   }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-0.jpeg");
+  background-position: 50% 50%;
 }
 
 .u-section-4 .u-sheet-1 {
@@ -1997,10 +1838,6 @@
 }
 
 @media (max-width: 1399px) {
-   .u-section-4 {
-    background-position: 50% 50%;
-  }
-
   .u-section-4 .u-sheet-1 {
     min-height: 762px;
   }
@@ -2023,6 +1860,10 @@
 }
 
 @media (max-width: 1199px) {
+   .u-section-4 {
+    background-position: 50% 50%;
+  }
+
   .u-section-4 .u-sheet-1 {
     min-height: 811px;
   }
